<resources>
    <string name="app_name">小本本</string>
    <string name="app_text_intro">记录借出借入信息，及时清账</string>
    <string name="app_text_more">更多</string>
    <string name="app_text_loading">请稍候&#8230;</string>
    <string name="app_text_contact_view_add">交易人员管理</string>
    <string name="app_text_empty">空空的，什么都没有！</string>
    <string name="app_text_contact_name_hint">请输入联系人名字</string>
    <string name="app_text_contact_tel_hint">请输入联系人手机号码</string>
    <string name="app_text_ensure">确定</string>
    <string name="app_text_cancel">取消</string>
    <string name="app_text_view_pay_flow">交易类型管理</string>
    <string name="app_text_pay_way_manager">交易方式管理</string>
    <string name="app_text_view_add_delete">查看|新增|删除</string>
    <string name="app_text_view_add">查看|新增</string>
    <string name="app_text_view">查看</string>
    <string name="app_text_add">新增</string>
    <string name="app_text_view_search_add_delete">查看|查找|新增|删除</string>
    <string name="app_text_input_pay_name">请输入支付类型名</string>
    <string name="app_text_transaction_flow_manager">交易流水管理</string>
    <string name="app_text_add_flow">添加一笔交易</string>
    <string name="app_text_input_transaction_amount">请输入交易金额[单位:元]</string>
    <string name="app_text_choose_pay_people">请选择交易人员</string>
    <string name="app_text_choose_pay_type">请选择交易类型</string>
    <string name="app_text_choose_pay_way">请选择交易方式</string>
    <string name="app_text_add_des">添加</string>
    <string name="app_text_remark_hint">写点什么</string>
    <string name="app_text_view_flow_manager">往来流水管理</string>
    <string name="app_text_view_delete">查看|删除</string>
    <string name="app_text_choose_contact_filter">选择交易人员</string>
    <string name="app_text_choose_pay_type_filter">选择交易类型</string>
    <string name="app_text_setting">定时情景模式</string>
    <string name="app_text_setting_timing_ringtone">设置定时响铃方式</string>
    <string name="app_text_modify">修改</string>
    <string name="app_text_setting_ringtone_tips">说明:\n设定一个时间段[周一至周五]内响铃方式[震动或静音]，在设定好的时间范围内，使用设置好的响铃方式。否则，设置响铃方式为\"响铃\"。</string>
    <string name="app_text_choose_ring_way">选择响铃方式:</string>
    <string name="app_text_mute">静音</string>
    <string name="app_text_shock">震动</string>
    <string name="app_text_start_time">开始时间:</string>
    <string name="app_text_end_time">结束时间:</string>
    <string name="app_text_enable_ringtone_scene">开启定时情景</string>
    <string name="app_text_disable_ringtone_scene">关闭定时情景</string>
</resources>
