<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        style="@style/TollBarStyle"
        app:navigationIcon="@mipmap/ic_back"
        app:subtitle="@string/app_text_modify"
        app:title="@string/app_text_setting_timing_ringtone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:lineSpacingExtra="5dp"
        android:padding="5dp"
        android:text="@string/app_text_setting_ringtone_tips"
        android:textColor="@color/colorPrimary"
        android:textSize="15dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="5dp"
        android:text="@string/app_text_choose_ring_way"
        android:textColor="@color/color_333"
        android:textSize="15dp" />

    <RadioGroup
        android:id="@+id/rgpRingWay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rbtShock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/app_text_shock" />

        <RadioButton
            android:id="@+id/rbtMute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:text="@string/app_text_mute" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_text_start_time"
            android:textColor="@color/color_333"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tvStart"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/color_333"
            android:textSize="15dp"
            tools:text="9:00" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/app_text_end_time"
            android:textColor="@color/color_333"
            android:textSize="15dp" />

        <TextView
            android:id="@+id/tvEnd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/color_333"
            android:textSize="15dp"
            tools:text="18:00" />
    </LinearLayout>


    <CheckBox
        android:id="@+id/cbxRingtoneMode"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:textColor="@color/color_333"
        android:textSize="15dp"
        tools:text="@string/app_text_enable_ringtone_scene" />

    <TextView
        android:id="@+id/tvEnsure"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:background="@color/colorPrimary"
        android:gravity="center"
        android:text="@string/app_text_ensure"
        android:textColor="@color/colorWhite"
        android:textSize="18dp" />
</LinearLayout>