<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolBar"
        style="@style/TollBarStyle"
        app:title="@string/app_text_add_flow"
        app:subtitle="@string/app_text_add"
        app:navigationIcon="@mipmap/ic_back" />
    <TextView
        android:id="@+id/tvAdd"
        style="@style/TextStyle"
        android:layout_alignParentBottom="true"
        android:layout_margin="15dp"
        android:text="@string/app_text_add_des"
        android:textSize="18dp"
        android:textColor="@color/colorWhite"
        android:background="@color/colorPrimary"
        android:gravity="center"/>
    <ScrollView
        android:layout_below="@id/toolBar"
        android:layout_above="@id/tvAdd"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:divider="@drawable/divider_ddd"
            android:showDividers="middle"
            android:orientation="vertical">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/tilAmount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/etAmount"
                    style="@style/EditStyle"
                    android:drawableStart="@mipmap/ic_amount"
                    android:drawablePadding="15dp"
                    android:hint="@string/app_text_input_transaction_amount"
                    android:inputType="numberDecimal"/>
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:id="@+id/tvPayPeople"
                style="@style/TextStyle"
                android:drawableStart="@mipmap/ic_contact"
                android:drawableEnd="@mipmap/ic_more_green"
                android:drawablePadding="15dp"
                android:layout_marginEnd="15dp"
                android:textColor="@color/color_666"
                android:text="@string/app_text_choose_pay_people"/>
            <TextView
                android:id="@+id/tvPayType"
                style="@style/TextStyle"
                android:drawableStart="@mipmap/ic_pay_type"
                android:drawableEnd="@mipmap/ic_more_green"
                android:layout_marginEnd="15dp"
                android:drawablePadding="15dp"
                android:textColor="@color/color_666"
                android:text="@string/app_text_choose_pay_type"/>
            <TextView
                android:id="@+id/tvPayWay"
                style="@style/TextStyle"
                android:drawableStart="@mipmap/ic_pay_way"
                android:drawableEnd="@mipmap/ic_more_green"
                android:layout_marginEnd="15dp"
                android:drawablePadding="15dp"
                android:textColor="@color/color_666"
                android:text="@string/app_text_choose_pay_way"/>
            <TextView
                android:id="@+id/tvDate"
                style="@style/TextStyle"
                android:drawableStart="@mipmap/ic_date"
                android:drawableEnd="@mipmap/ic_more_green"
                android:layout_marginEnd="15dp"
                android:drawablePadding="15dp"
                android:textColor="@color/color_333"/>
            <EditText
                android:id="@+id/etRemark"
                style="@style/EditStyle"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:drawableStart="@mipmap/ic_remark"
                android:drawablePadding="15dp"
                android:inputType="text"/>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>