<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="15dp"
    android:paddingEnd="15dp"
    android:background="@drawable/shape_solid_fff_corner_5dp">
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilContactName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etContactName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/ic_contact"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_666"
            android:textSize="15dp"
            android:hint="@string/app_text_contact_name_hint"
            android:background="@color/colorTransparent"
            android:inputType="text"
            android:maxLines="1"
            android:maxLength="10"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilContactTell"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/etContactTell"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:drawablePadding="5dp"
            android:drawableStart="@mipmap/ic_call"
            android:textColor="@color/color_333"
            android:textColorHint="@color/color_666"
            android:textSize="15dp"
            android:hint="@string/app_text_contact_tel_hint"
            android:background="@color/colorTransparent"
            android:inputType="phone"
            android:maxLines="1"
            android:maxLength="11"/>
    </android.support.design.widget.TextInputLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tvEnsure"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_text_ensure"
            android:textSize="18dp"
            android:textColor="@color/color_333"
            android:gravity="center"/>
        <View android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/app_text_cancel"
            android:textSize="18dp"
            android:textColor="@color/color_333"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>